  * debsign:
    - Don't prompt to overwrite the dsc file (ie. may be owned by root,
      parent dir owned by yourself) - force it and hope it works.
      (Closes: #249950)
    - Change nonstandard head -1 to head -n 1. (Closes: #231130)
    - Add a versioned dependency on gnupg (>= 1.0.7), when
      --no-show-policy-url was added. (Closes: #228938)
  * bts:
    - Recognize the 'l10n' tag for bts. (Closes: #227735)
    - bts.1: Fix extraneous indentation. (Closes: #236309)
  * Devscripts::Versort:
    - Apply Roderick Schertler's patch to fix an infinite loop comparing
      identical non-Debian revisions. (Closes: #236344)
  * rc-alert:
    - rc-alert.1: Add SEE ALSO for popbugs(1). (Closes: #227078)
  * New scripts by me:
    - tagpending: Within a source directory, tags all bugs not already
      'pending' to be as such.

 -- Joshua Kwan <joshk@triplehelix.org>  Fri, 30 Jul 2004 01:06:11 -0700

devscripts (2.7.95.1) unstable; urgency=low

  * bts: fixed some major blunders in bts show command: now shows
    something in offline mode, and multiple instances of bts show work
    concurrently

 -- Julian Gilbey <jdg@debian.org>  Thu, 11 Dec 2003 18:47:25 +0000

devscripts (2.7.95) unstable; urgency=low

  * New script:
    - cvs-debrelease: to complete the cvs-* scripts bundle, this one
      replicates the debrelease behaviour
  * bts: remove special tag:<tag> processing, as the BTS understands
    tag:<tag> requests (thanks Colin!)
  * cvs-deb{c,i}: call deb{c,i} directly
  * debchange: don't give unnecessary UTF-8 warning notice (closes:
    #222110)
  * dscverify: fix ENOENT bug (closes: #222890)
  * uscan: some minor cleanups

 -- Julian Gilbey <jdg@debian.org>  Mon,  8 Dec 2003 23:14:49 +0000

devscripts (2.7.94.3) unstable; urgency=low

  * debi/debc: fix typo in determining .changes filename (closes: #221842)

 -- Julian Gilbey <jdg@debian.org>  Thu, 20 Nov 2003 21:50:54 +0000

devscripts (2.7.94.2) unstable; urgency=low
